--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,10 +79,7 @@ known_first_party = ["jssp"]
 skip = [".venv", ".venv311", "build", "dist", "data", "research"]
 src_paths = ["src", "tests"]
 
-[tool.flake8]
-# Align flake8 with Black/Ruff configuration
-max-line-length = 100
-extend-ignore = ["E203", "W503"]
+## Removed [tool.flake8] section to avoid duplication with setup.cfg.
 
 [tool.mypy]
 python_version = "3.11"
