--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
 [flake8]
 max-line-length = 100
 extend-ignore = E203,W503
+exclude = .git,__pycache__,.venv,.venv311,build,dist,data,research,*.egg-info,.mypy_cache,.pytest_cache,.ruff_cache,*/site-packages/*,**/site-packages/*
