--- a/config.yaml
+++ b/config.yaml
@@ -15,16 +15,16 @@ general:
   # input_file: "data/tai100_20.txt"
 
 # Od tad lepsiejsze
-  input_file: "data/tai200_10.txt"
+  # input_file: "data/tai200_10.txt"
   # input_file: "data/tai200_20.txt"
 
-  # input_file: "data/tai500_20.txt"
+  input_file: "data/tai500_20.txt"
   instance_number: 2
   # Choose exactly one compare mode:
   # - "tabu_search_compare"
   # - "simulated_annealing_compare"
-  # algorithm: "tabu_search_compare"
-  algorithm: "simulated_annealing_compare"
+  algorithm: "tabu_search_compare"
+  # algorithm: "simulated_annealing_compare"
 
 
 visualization:
@@ -33,7 +33,7 @@ visualization:
 
 algorithm_common:
   # Time limit can be specified in seconds (recommended) or milliseconds.
-  time_limit_s: 60
+  time_limit_s: 10
 
 tabu_search:
   tabu_tenure: 10
@@ -42,10 +42,10 @@ simulated_annealing:
   initial_temp: 1000.0
   final_temp: 1.0
   alpha: 0.95
-  # Reheating activated
-  reheat_factor: 1.4          # multiplicative bump (cap at initial_temp)
-  stagnation_ms: 8000         # window (ms) without improvement triggering reheating
-  temp_floor_factor: 1.0      # floor = final_temp * factor
+  # Time-based reheating parameters (restored 2025-10-05)
+  reheat_factor: 1.5          # multiply temperature by this on stagnation (capped at initial_temp)
+  stagnation_ms: 5000         # no improvement for this many ms -> attempt reheat
+  temp_floor_factor: 1.0      # floor = final_temp * factor (>=1)
 
 # Optional generator: if provided, `main.py` will generate a synthetic instance
 # instead of reading from `general.input_file`.
