--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,9 @@ general:
 
 # Od tad lepsiejsze
   # input_file: "data/tai200_10.txt"
-  input_file: "data/tai200_20.txt"
+  # input_file: "data/tai200_20.txt"
 
-  # input_file: "data/tai500_20.txt"
+  input_file: "data/tai500_20.txt"
   instance_number: 2
   # Choose exactly one compare mode:
   # - "tabu_search_compare"
@@ -65,22 +65,25 @@ experiment:
   enabled: false  
   tabu_tenure: 10   
       # when true: run batch experiments (all instances); false -> compare mode
+  # instance_files: [
+  #   "data/tai20_5.txt", "data/tai20_10.txt", "data/tai20_20.txt",
+  #   "data/tai50_5.txt", "data/tai50_10.txt", "data/tai50_20.txt",
+  #   "data/tai100_5.txt", "data/tai100_10.txt", "data/tai100_20.txt",
+  #   "data/tai200_10.txt", "data/tai200_20.txt",
+  #   "data/tai500_20.txt"
+  # ]
+  # repeats: 1             # number of RNG seeds per (algorithm, neighborhood, instance, time_limit)
+  # time_limits_s: [0.1, 1, 10]
+
+
   instance_files: [
-    "data/tai20_5.txt", "data/tai20_10.txt", "data/tai20_20.txt",
-    "data/tai50_5.txt", "data/tai50_10.txt", "data/tai50_20.txt",
-    "data/tai100_5.txt", "data/tai100_10.txt", "data/tai100_20.txt",
-    "data/tai200_10.txt", "data/tai200_20.txt",
-    "data/tai500_20.txt"
+    # "data/tai20_5.txt",
+    # "data/tai50_20.txt",
+    # "data/tai100_5.txt", 
+    "data/tai200_20.txt",
+    # "data/tai500_20.txt"
   ]
   repeats: 1             # number of RNG seeds per (algorithm, neighborhood, instance, time_limit)
-  time_limits_s: [0.1, 0.5, 1, 2, 5, 10]
+  # time_limits_s: [0.1, 1, 10]
+  time_limits_s: [1]
 
-  # instance_files: [
-  #   # "data/tai20_5.txt", "data/tai20_10.txt", "data/tai20_20.txt",
-  #   # "data/tai50_5.txt", "data/tai50_10.txt", "data/tai50_20.txt",
-  #   # "data/tai100_5.txt", "data/tai100_10.txt", "data/tai100_20.txt",
-  #   "data/tai200_10.txt", "data/tai200_20.txt",
-  #   # "data/tai500_20.txt"
-  # ]
-  # repeats: 10             # number of RNG seeds per (algorithm, neighborhood, instance, time_limit)
-  # time_limits_s: [0.1]
