--- a/config.yaml
+++ b/config.yaml
@@ -21,9 +21,9 @@ general:
   # input_file: "data/tai500_20.txt"
   instance_number: 0
   # Choose exactly one compare mode:
-  # - "tabu_search_compare"
+  # - "ils_compare"
   # - "simulated_annealing_compare"
-  algorithm: "tabu_search_compare"
+  algorithm: "ils_compare"
   # algorithm: "simulated_annealing_compare"
 
 
@@ -37,7 +37,7 @@ algorithm_common:
   # Time limit can be specified in seconds (recommended) or milliseconds.
   time_limit_s: 0.1
 
-tabu_search:
+iterated_local_search:
   tabu_tenure: 10
 
 simulated_annealing:
